test/error/E17.chifn
{
	"type": "function",
	"name": "helloworld",
	"description": "Prints Hello World",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"nodes": {
		"e19de7d2-bdab-48eb-af82-2fc26076b4e5": {
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
		{
			"type": "exec",
			"input": {}
		}
	],
	"local_variables": {}
}
